--- a/Design_interior/service.html
+++ b/Design_interior/service.html
@@ -21,6 +21,8 @@
         <div class="sheet"></div>
         <div class="header_wrapper clearfix">
             <div class="header_item">
+                <div class="back_ppc">
+                </div>
                 <div class="logo">
                     <div class="logo_cont">
                         <a href="index.html">
@@ -625,17 +627,17 @@
                         <div class="cell clearfix">
                             <div class="col-lg-4">
                                 <div class="design_interior_item">
-                                    <h2>дизайн интерьера</h2>
+                                    <h2>Благоустройство
+                                        территории</h2>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="design_interior_item">
-                                    <p>В своей работе я стремлюсь предлагать гибкий подход с учетом ваших требований и бюджетом.
-                                        Это означает, что я готова не просто делать крупномасштабные проекты, дома и квартиры
-                                        ,общественный дизайн, но и помогу сделать косметический ремонт отдельных комнат,
-                                        или разработаю для Вас эксклюзивные детали интерьера или экстерьера. Вы также
-                                        можете заказать разработать дизайн + визуализацию, для того чтобы
-                                        избежать не только разочарования, но и потенциально дорогостоящих ошибок.
+                                    <p>Благоустройство участка – это комплекс мероприятий, направленных на
+                                        повышение эстетических, санитарных и экологических условий на придомовой
+                                        территории. К основным элементам благоустройства территории относится
+                                        прокладка дорожно-тропиночной сети, возведение малых архитектурных
+                                        форм и сведение к единому целому  всех присутствующих форм рельефа.
                                     </p>
                                 </div>
                             </div>
