--- a/Design_interior/catalog.html
+++ b/Design_interior/catalog.html
@@ -21,6 +21,8 @@
         <div class="sheet"></div>
         <div class="header_wrapper clearfix">
             <div class="header_item">
+                <div class="back_ppc">
+                </div>
                 <div class="logo">
                     <div class="logo_cont">
                         <a href="index.html">
