--- a/Design_interior/portfolio.html
+++ b/Design_interior/portfolio.html
@@ -253,7 +253,7 @@
                         <div class="col-md-4">
                             <a href="portfolio_photo.html">
                                 <div class="img_container">
-                                    <img src="images/1.jpg" alt="">
+                                    <img src="images/portfolio_2.jpg" alt="">
                                     <div class="description">
                                         Название альбома
                                     </div>
@@ -267,7 +267,7 @@
                         <div class="col-md-4">
                             <a href="portfolio_photo.html">
                                 <div class="img_container">
-                                    <img src="images/2.jpg" alt="">
+                                    <img src="images/portfolio_2.jpg" alt="">
                                     <div class="description">
                                         Длинное название этого альбома
                                     </div>
