--- a/Design_interior/photo.html
+++ b/Design_interior/photo.html
@@ -24,6 +24,7 @@
                 <div class="back_ppc">
                 </div>
                 <div class="logo">
+                    <div class="sheet_new"></div>
                     <div class="logo_cont">
                         <a href="index.html">
                             <img src="images/logo_big.svg" alt="">
