--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="img_container">
-                        <img src="images/IMG_1332.JPG" alt="">
+                        <img src="images/IMG_1331.JPG" alt="">
                     </div>
                     <div class="description">Ортопедия</div>
                 </div>
@@ -117,7 +117,7 @@
                     <div class="img_container">
                         <img src="images/IMG_1577.JPG" alt="">
                     </div>
-                    <div class="description">Рентген</div>
+                    <div class="description">Рентген кабинет</div>
                 </div>
             </div>
         </div>
@@ -159,15 +159,20 @@
                 <div class="row clearfix">
                     <div class="col-md-3">
                         <div class="img_container">
-                            <img src="images/6_46.png" alt="">
+                            <img src="images/6_46.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <h5>Самсонова Маргарита</h5>
+                        <h5>Вовк Виктория Анатолиевна - главный врач, врач - стоматолог, терапевт высшей категории</h5>
                         <div class="text">
-                            Молодой коллектив врачей высшей и первой категорий владеет новыми
-                            технологиями, постоянно обучается, в своей работе руководствуется принципом – помочь
-                            Пациенту найти оптимальное и, главное, правильное решение его проблем!
+                            Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный стоматологический центр, покрывающий практически все возможные проблемы пациента. Мы сочетаем высокий уровень медицинского обслуживания и лучшие традиции европейской и украинской стоматологии с современными высокотехнологичными методами лечения.
+                            <br>
+                            <br>
+                            Стоматология располагает широким спектром технических возможностей используя современное немецкое оборудование а так же оснастку, материалы и технологии ведущих мировых фирм.
+                            <br>
+                            <br>
+                            Молодой коллектив врачей высшей и первой категорий владеет новыми технологиями, постоянно обучается, в своей работе руководствуется принципом – помочь Пациенту найти оптимальное и, главное, правильное решение его проблем!
+
                         </div>
                     </div>
                 </div>
@@ -176,24 +181,20 @@
                 <div class="row clearfix">
                     <div class="col-md-3">
                         <div class="img_container">
-                            <img src="images/7_43.png" alt="">
+                            <img src="images/license.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <h5>Громова Светлана</h5>
+                        <h5>Лицензия МОЗ №376 от 21.04.2016</h5>
                         <div class="text">
-                            Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный
-                            стоматологический центр, покрывающий практически все возможные проблемы пациента.
-                            Мы сочетаем высокий уровень медицинского обслуживания и лучшие традиции европейской и
-                            украинской стоматологии с современными высокотехнологичными методами лечения.
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="attention">
-                Главной целью нашего  центра является сохранение репродуктивного здоровья
-                женщины и рождение здорового поколения детей!
-            </div>
+            <!--<div class="attention">-->
+                <!--Главной целью нашего  центра является сохранение репродуктивного здоровья-->
+                <!--женщины и рождение здорового поколения детей!-->
+            <!--</div>-->
         </div>
     </div>
 
@@ -207,7 +208,7 @@
                     </div>
                     <div class="description">
                         <span>Место расположения
-                        Стоматология.</span> «Viktoria-Dent» расположена в центре города,
+                        Стоматология.</span> <br>«Viktoria-Dent» расположена в центре города,
                         в ста метрах от станции метро «Дружба Народов».
                         К нам удобно добираться из любой точки города.
                         Пациентов здесь встретят квалифицированный персонал
@@ -220,13 +221,14 @@
                         <i class="fa fa-rocket" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Современное оборудование.</span>
+                        <span>Современное оборудование.</span><br>
                         В клинике установлено немецкое оборудование:
-                        - стоматологические установки фирмы Sirona,
-                        - рентгенаппаратура нового поколения – радиовизиограф
-                        который уменьшает дозу рентгеноблучения на 90 процентов,
-                        - и другое.
-
+                        <ul>
+                            <li>- стоматологические установки фирмы Sirona,</li>
+                            <li>- рентгенаппаратура нового поколения – радиовизиограф
+                                который уменьшает дозу рентгеноблучения на 90 процентов,</li>
+                            <li>- и другое.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -234,7 +236,7 @@
                         <i class="fa fa-handshake-o" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Доступные цены.</span>
+                        <span>Доступные цены.</span><br>
                         Наши услуги доступны всем. Предоставляя качественный сервис,
                         предлагаем гибкие цены и скидки, проводим акции.
                         Комплексный подход, индивидуальные программы лечения,
@@ -247,12 +249,13 @@
                         <i class="fa fa-heartbeat" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Безопасное лечение.</span>
-                        Клиника использует эффективные:
-                        - бактерицидные лампы с автоматическим обеззараживанием,
-                        - ультразвуковая ванна для мойки наконечников,
-                        - упаковка инструмента в разовые Крафт–пакеты,
-                        - автоклав MELAG23B (Германия),
+                        <span>Безопасное лечение.</span><br>
+                        <ul>
+                            <li>- бактерицидные лампы с автоматическим обеззараживанием,</li>
+                            <li>- ультразвуковая ванна для мойки наконечников,</li>
+                            <li>- упаковка инструмента в разовые Крафт–пакеты,</li>
+                            <li>- автоклав MELAG23B (Германия),</li>
+                        </ul>
                         Эти меры по программам «анти гепатит-спид»
                         защищают от опасных инфекций.
 
@@ -272,6 +275,26 @@
                 </div>
                 <div class="item">
                     <div class="img_container">
+                        <a href="images/IMG_1505.JPG" data-lightbox="image-1"><img src="images/IMG_1505.JPG" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1331.JPG" data-lightbox="image-1"><img src="images/IMG_1331.JPG" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1362.JPG" data-lightbox="image-1"><img src="images/IMG_1362.JPG" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1606.JPG" data-lightbox="image-1"><img src="images/IMG_1606.JPG" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
                         <a href="images/IMG_1577.JPG" data-lightbox="image-1"><img src="images/IMG_1577.JPG" alt=""></a>
                     </div>
                 </div>
@@ -287,12 +310,37 @@
                 </div>
                 <div class="item">
                     <div class="img_container">
-                        <a href="images/IMG_1362.JPG" data-lightbox="image-1"><img src="images/IMG_1362.JPG" alt=""></a>
+                        <a href="images/IMG_1563.JPG" data-lightbox="image-1"><img src="images/IMG_1563.JPG" alt=""></a>
                     </div>
                 </div>
                 <div class="item">
                     <div class="img_container">
-                        <a href="images/IMG_1563.JPG" data-lightbox="image-1"><img src="images/IMG_1563.JPG" alt=""></a>
+                        <a href="images/viberimage5.jpg" data-lightbox="image-1"><img src="images/viberimage5.jpg" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/viberimage6.jpg" data-lightbox="image-1"><img src="images/viberimage6.jpg" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1637.JPG" data-lightbox="image-1"><img src="images/IMG_1637.JPG" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1569.JPG" data-lightbox="image-1"><img src="images/IMG_1569.JPG" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1644.JPG" data-lightbox="image-1"><img src="images/IMG_1644.JPG" alt=""></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1216.JPG" data-lightbox="image-1"><img src="images/IMG_1216.JPG" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -343,53 +391,83 @@
 
     <div class="carousel_footer">
         <div class="container">
-            <h3>ЧТО ГОВОРЯТ НАШИ ПАЦИЕНТКИ:</h3>
+            <h3>ЧТО ГОВОРЯТ НАШИ ПАЦИЕНТЫ:</h3>
             <div class="carousel">
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/3_65.png" alt="">
+                            <img src="images/logo.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
-                            Выражаю безмерную благодарность всему персоналу за проведение операции. Даже не представляла,
-                            что операция пройдет настолько легко и безболезненно. Результат меня устроил на 100% - грудь получилась шикарной!
-                            Желаю здоровья всем врачам, а клинике- успехов! Белоусова Светлана.
+                            Всегда очень боялась лечить зубы! А вот в клинике «Виктория – Дент» чувствую себя уверенно.
+                            Очень радушный коллектив, приветливые администраторы и знающие доктора. Лечила
+                            зубы у Главного врача клиники – Вовк Виктории Анатольевны, осталась чрезвычайно
+                            довольна её работой. Не могла налюбоваться, как хорошо она мне сделала зуб.
+                            А главное было совсем не больно!
+                            С удовольствием буду рекомендовать всем своим родным и близким.
+                            <span>Елена Николаевна</span>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/3_65.png" alt="">
+                            <img src="images/logo.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
-                            Выражаю безмерную благодарность всему персоналу за проведение операции. Даже не представляла,
-                            что операция пройдет настолько легко и безболезненно. Результат меня устроил на 100% - грудь получилась шикарной!
-                            Желаю здоровья всем врачам, а клинике- успехов! Белоусова Светлана.
+                            Мне нравится, как работает  доктор-ортопед Лигостаев Олег Владимирович.
+                            Всем рекомендую посетить, при  необходимости, этого врача.Ничего лишнего не
+                            предлагал, всё по делу, и на мой взгляд, рационально и оправданно .
+                            Я оценил  его профессионализм и  человеческие качества. Врач просто супер! Рекомендую всем!
+                            <span>Юрий Фёдорович</span>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/3_65.png" alt="">
+                            <img src="images/logo.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
-                            Выражаю безмерную благодарность всему персоналу за проведение операции. Даже не представляла,
-                            что операция пройдет настолько легко и безболезненно. Результат меня устроил на 100% - грудь получилась шикарной!
-                            Желаю здоровья всем врачам, а клинике- успехов! Белоусова Светлана.
+                            Хочу выразить большую благодарность замечательному доктору – Фиц Татьяне Владимировне.
+                            Хочу сказать ей спасибо за высокий профессионализм, индивидуальный чуткий
+                            подход и великолепную работу. Привела сначала к ней своего сына, который очень боялся
+                            лечить зубы. Татьяна Владимировна нашла с ребёнком общий язык,  и мы пролечили все
+                            дырочки в зубках. А затем пациентами этого прекрасного врача стали и мы с мужем.
+                            Вся моя семья осталась в восторге! Спасибо большое Вам, Татьяна Владимировна.
+                            <span>Ольга Николаевна</span>
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/3_65.png" alt="">
+                            <img src="images/logo.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
-                            Выражаю безмерную благодарность всему персоналу за проведение операции. Даже не представляла,
-                            что операция пройдет настолько легко и безболезненно. Результат меня устроил на 100% - грудь получилась шикарной!
-                            Желаю здоровья всем врачам, а клинике- успехов! Белоусова Светлана.
+                            Меня покорил молодой, но знающий доктор – Прикидько Александр Романович.
+                            Попала к нему на приём с очень сложной ситуацией во рту. Доктор все мне подробно
+                            объяснил, предложил несколько вариантов лечения и дальнейшего протезирования.
+                            Был со мной очень тактичен и внимателен. После подробной консультации я
+                            выбрала для себя именно этого доктора и мни разу не пожалела о своём выборе.
+                            Результат лечения превзошел все мои ожидания. Спасибо!
+                            <span>Татьяна Викторовна</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="row clearfix">
+                        <div class="img_container col-md-3">
+                            <img src="images/logo.jpg" alt="">
+                        </div>
+                        <div class="text col-md-9">
+                            Удалял сразу 2 зуба у доктора Логвинова Фёдора Владимировича.
+                            Вообще не ожидал, что такая процедура может быть совсем безболезненной
+                            и пройдет достаточно быстро. После удаления, Фёдор Владимирович всё мне
+                            подробно объяснил, дал рекомендации и назначил контрольный осмотр.
+                            Период заживления прошёл без осложнений. Вот теперь через несколько
+                            месяцев собираюсь на имплантацию к моему любимому доктору.
+                            <span>Александр Михайлович</span>
                         </div>
                     </div>
                 </div>
