--- a/Design_interior/card.html
+++ b/Design_interior/card.html
@@ -256,6 +256,20 @@
                             <a href="images/card_img.jpg" data-lightbox="image-1" data-title="My caption">
                                 <img src="images/card_img.jpg" alt="">
                             </a>
+                            <div class="mulas clearfix">
+                                <a href="images/card_img.jpg" data-lightbox="image-1" data-title="My caption">
+                                    <img src="images/card_img.jpg" alt="">
+                                </a>
+                                <a href="images/card_img.jpg" data-lightbox="image-1" data-title="My caption">
+                                    <img src="images/card_img.jpg" alt="">
+                                </a>
+                                <a href="images/card_img.jpg" data-lightbox="image-1" data-title="My caption">
+                                    <img src="images/card_img.jpg" alt="">
+                                </a>
+                                <a href="images/card_img.jpg" data-lightbox="image-1" data-title="My caption">
+                                    <img src="images/card_img.jpg" alt="">
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
