--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="brown_line">
-        <h3>Німецьке обладнання сучасні технології</h3>
+        <h3>Немецкое оборудование современные технологии</h3>
     </div>
 
     <div class="our_service">
@@ -117,7 +117,7 @@
                     <div class="img_container">
                         <img src="images/IMG_1577.JPG" alt="">
                     </div>
-                    <div class="description">Рентген кабинет</div>
+                    <div class="description">Рентгенография цифровая</div>
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
                 <div class="button">
                     <input type="submit" value="ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ">
                 </div>
-                <div class="polit"><a href="">Скачать прайс</a></div>
+                <div class="polit"><a href="images/Price.docx">Скачать прайс</a></div>
             </form>
             <div class="img_container">
                 <img src="images/4_57.png" alt="">
@@ -154,7 +154,7 @@
 
     <div class="doctors">
         <div class="container">
-            <h3>Прием ведут опытные врачи:</h3>
+            <h3></h3>
             <div class="doctors_item">
                 <div class="row clearfix">
                     <div class="col-md-3">
@@ -165,14 +165,19 @@
                     <div class="col-md-9">
                         <h5>Вовк Виктория Анатолиевна - главный врач, врач - стоматолог, терапевт высшей категории</h5>
                         <div class="text">
-                            Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный стоматологический центр, покрывающий практически все возможные проблемы пациента. Мы сочетаем высокий уровень медицинского обслуживания и лучшие традиции европейской и украинской стоматологии с современными высокотехнологичными методами лечения.
+                            Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный стоматологический центр,
+                            покрывающий практически все возможные проблемы пациента. Мы сочетаем высокий уровень
+                            медицинского обслуживания и лучшие традиции европейской и украинской стоматологии с
+                            современными высокотехнологичными методами лечения.
                             <br>
                             <br>
-                            Стоматология располагает широким спектром технических возможностей используя современное немецкое оборудование а так же оснастку, материалы и технологии ведущих мировых фирм.
+                            Стоматология располагает широким спектром технических возможностей используя современное
+                            немецкое оборудование а так же оснастку, материалы и технологии ведущих мировых фирм.
                             <br>
                             <br>
-                            Молодой коллектив врачей высшей и первой категорий владеет новыми технологиями, постоянно обучается, в своей работе руководствуется принципом – помочь Пациенту найти оптимальное и, главное, правильное решение его проблем!
-
+                            Молодой коллектив врачей высшей и первой категорий владеет новыми технологиями,
+                            постоянно обучается, в своей работе руководствуется принципом – помочь Пациенту
+                            найти оптимальное и, главное, правильное решение его проблем!
                         </div>
                     </div>
                 </div>
@@ -185,7 +190,7 @@
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <h5>Лицензия МОЗ №376 от 21.04.2016</h5>
+                        <h5>Лицензия МОЗ №376 от 21.04.2016 г.</h5>
                         <div class="text">
                         </div>
                     </div>
@@ -211,7 +216,7 @@
                         Стоматология.</span> <br>«Viktoria-Dent» расположена в центре города,
                         в ста метрах от станции метро «Дружба Народов».
                         К нам удобно добираться из любой точки города.
-                        Пациентов здесь встретят квалифицированный персонал
+                        Пациентов здесь встретит квалифицированный персонал
                         и комфортные условия обслуживания.
 
                     </div>
@@ -226,7 +231,7 @@
                         <ul>
                             <li>- стоматологические установки фирмы Sirona,</li>
                             <li>- рентгенаппаратура нового поколения – радиовизиограф
-                                который уменьшает дозу рентгеноблучения на 90 процентов,</li>
+                                который уменьшает дозу рентгеноблучения на 90%,</li>
                             <li>- и другое.</li>
                         </ul>
                     </div>
@@ -333,16 +338,16 @@
                         <a href="images/IMG_1569.JPG" data-lightbox="image-1"><img src="images/IMG_1569.JPG" alt=""></a>
                     </div>
                 </div>
-                <div class="item">
-                    <div class="img_container">
-                        <a href="images/IMG_1644.JPG" data-lightbox="image-1"><img src="images/IMG_1644.JPG" alt=""></a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="img_container">
-                        <a href="images/IMG_1216.JPG" data-lightbox="image-1"><img src="images/IMG_1216.JPG" alt=""></a>
-                    </div>
-                </div>
+                <!--<div class="item">-->
+                    <!--<div class="img_container">-->
+                        <!--<a href="images/IMG_1644.JPG" data-lightbox="image-1"><img src="images/IMG_1644.JPG" alt=""></a>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="item">-->
+                    <!--<div class="img_container">-->
+                        <!--<a href="images/IMG_1216.JPG" data-lightbox="image-1"><img src="images/IMG_1216.JPG" alt=""></a>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div>
         </div>
     </div>
@@ -381,7 +386,7 @@
                 <div class="button">
                     <input type="submit" value="ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ">
                 </div>
-                <div class="polit"><a href="">Скачать прайс</a></div>
+                <div class="polit"><a href="images/Price.docx">Скачать прайс</a></div>
             </form>
             <div class="img_container">
                 <img src="images/4_57.png" alt="">
@@ -396,7 +401,7 @@
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/logo.jpg" alt="">
+                            <img src="images/12.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
                             Всегда очень боялась лечить зубы! А вот в клинике «Виктория – Дент» чувствую себя уверенно.
@@ -412,12 +417,12 @@
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/logo.jpg" alt="">
+                            <img src="images/12.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
                             Мне нравится, как работает  доктор-ортопед Лигостаев Олег Владимирович.
-                            Всем рекомендую посетить, при  необходимости, этого врача.Ничего лишнего не
-                            предлагал, всё по делу, и на мой взгляд, рационально и оправданно .
+                            Всем рекомендую посетить, при  необходимости, этого врача. Ничего лишнего не
+                            предлагал, всё по делу, и на мой взгляд, рационально и оправданно.
                             Я оценил  его профессионализм и  человеческие качества. Врач просто супер! Рекомендую всем!
                             <span>Юрий Фёдорович</span>
                         </div>
@@ -426,7 +431,7 @@
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/logo.jpg" alt="">
+                            <img src="images/12.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
                             Хочу выразить большую благодарность замечательному доктору – Фиц Татьяне Владимировне.
@@ -442,7 +447,7 @@
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/logo.jpg" alt="">
+                            <img src="images/12.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
                             Меня покорил молодой, но знающий доктор – Прикидько Александр Романович.
@@ -458,7 +463,7 @@
                 <div class="item">
                     <div class="row clearfix">
                         <div class="img_container col-md-3">
-                            <img src="images/logo.jpg" alt="">
+                            <img src="images/12.jpg" alt="">
                         </div>
                         <div class="text col-md-9">
                             Удалял сразу 2 зуба у доктора Логвинова Фёдора Владимировича.
