--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -487,7 +487,11 @@
                 <div class="col-md-7">
                     Тел/Факс: <span>(044) 285-57-10, (067) 526-19-92, (099) 083-75-74</span>
                 </div>
-                <div class="col-md-5">Адреса: Київ, б-р М. Приймаченка, 6</div>
+                <div class="col-md-5">Адреса: Київ, б-р М. Приймаченка, 6<br>
+                    vdent103@gmail.com
+                </div>
+                <div class="clearfix"></div>
+                <a href="web-intellectus.com">© Intellectus Studio. All right reserved 2016.</a>
             </div>
         </div>
     </footer>
