--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="brown_line">
-        <h3>Немецкое оборудование современные технологии</h3>
+        <h3>Немецкое оборудование / современные технологии</h3>
     </div>
 
     <div class="our_service">
@@ -125,8 +125,8 @@
 
     <div class="form_block">
         <div class="container">
-            <h3>Заполните форму,</h3>
-            <h4>чтобы записаться на консультацию к гинекологу</h4>
+            <h3>Заполните форму</h3>
+            <h4>Вам перезвонят и запишут на консультацию к стоматологу</h4>
             <form action="" class="clearfix">
                 <div class="input_container">
                     <input type="text" required placeholder="Имя*">
@@ -142,7 +142,7 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="button">
-                    <input type="submit" value="ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ">
+                    <input type="submit" value="ОТПРАВИТЬ ЗАПРОС">
                 </div>
                 <div class="polit"><a href="images/Price.docx">Скачать прайс</a></div>
             </form>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <h5>Вовк Виктория Анатолиевна - главный врач, врач - стоматолог, терапевт высшей категории</h5>
+                        <h5>Вовк Виктория Анатолиевна - главный врач, врач - стоматолог<br> терапевт высшей категории:</h5>
                         <div class="text">
                             Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный стоматологический центр,
                             покрывающий практически все возможные проблемы пациента. Мы сочетаем высокий уровень
@@ -212,8 +212,8 @@
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                     </div>
                     <div class="description">
-                        <span>Место расположения
-                        Стоматология.</span> <br>«Viktoria-Dent» расположена в центре города,
+                        <span>Место расположения.</span><br>
+                        Стоматология «Viktoria-Dent» расположена в центре города,
                         в ста метрах от станции метро «Дружба Народов».
                         К нам удобно добираться из любой точки города.
                         Пациентов здесь встретит квалифицированный персонал
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="img_container">
-                        <i class="fa fa-rocket" aria-hidden="true"></i>
+                        <img src="images/icons-4.jpg" alt="">
                     </div>
                     <div class="description">
                         <span>Современное оборудование.</span><br>
@@ -335,7 +335,7 @@
                 </div>
                 <div class="item">
                     <div class="img_container">
-                        <a href="images/IMG_1569.JPG" data-lightbox="image-1"><img src="images/IMG_1569.JPG" alt=""></a>
+                        <a href="images/IMG_1216.JPG" data-lightbox="image-1"><img src="images/IMG_1216.JPG" alt=""></a>
                     </div>
                 </div>
                 <!--<div class="item">-->
@@ -367,8 +367,8 @@
 
     <div class="form_block">
         <div class="container">
-            <h3>Заполните форму,</h3>
-            <h4>чтобы записаться на консультацию к гинекологу</h4>
+            <h3>Заполните форму</h3>
+            <h4>Вам перезвонят и запишут на консультацию к стоматологу</h4>
             <form action="" class="clearfix">
                 <div class="input_container">
                     <input type="text" required placeholder="Имя*">
@@ -384,7 +384,7 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="button">
-                    <input type="submit" value="ПОЛУЧИТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ">
+                    <input type="submit" value="ОТПРАВИТЬ ЗАПРОС">
                 </div>
                 <div class="polit"><a href="images/Price.docx">Скачать прайс</a></div>
             </form>
