--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="img_container">
-                        <img src="images/IMG_1577.JPG" alt="">
+                        <img src="images/1111.jpg" alt="">
                     </div>
                     <div class="description">Рентгенография цифровая</div>
                 </div>
