--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <h5>Вовк Виктория Анатолиевна - главный врач, врач - стоматолог<br> терапевт высшей категории:</h5>
+                        <h5><span>Вовк Виктория Анатолиевна - главный врач, </span><span> врач - стоматолог<br>терапевт высшей категории:</span></h5>
                         <div class="text">
                             Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный стоматологический центр,
                             покрывающий практически все возможные проблемы пациента. Мы сочетаем высокий уровень
@@ -261,8 +261,8 @@
                             <li>- упаковка инструмента в разовые Крафт–пакеты,</li>
                             <li>- автоклав MELAG23B (Германия),</li>
                         </ul>
-                        Эти меры по программам «анти гепатит-спид»
-                        защищают от опасных инфекций.
+                        Эти и другие меры по программам «анти гепатит-спид»
+                        защитят Вас от опасных инфекций.
 
                     </div>
                 </div>
@@ -273,6 +273,11 @@
     <div class="carousel_block">
         <div class="container">
             <div class="carousel">
+                <div class="item">
+                    <div class="img_container">
+                        <a href="images/IMG_1606.JPG" data-lightbox="image-1"><img src="images/IMG_1606.JPG" alt=""></a>
+                    </div>
+                </div>
                 <div class="item">
                     <div class="img_container">
                         <a href="images/A0723.JPG" data-lightbox="image-1"><img src="images/A0723.JPG" alt=""></a>
@@ -295,12 +300,7 @@
                 </div>
                 <div class="item">
                     <div class="img_container">
-                        <a href="images/IMG_1606.JPG" data-lightbox="image-1"><img src="images/IMG_1606.JPG" alt=""></a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="img_container">
-                        <a href="images/IMG_1577.JPG" data-lightbox="image-1"><img src="images/IMG_1577.JPG" alt=""></a>
+                        <a href="images/1111.jpg" data-lightbox="image-1"><img src="images/1111.jpg" alt=""></a>
                     </div>
                 </div>
                 <div class="item">
@@ -333,11 +333,11 @@
                         <a href="images/IMG_1637.JPG" data-lightbox="image-1"><img src="images/IMG_1637.JPG" alt=""></a>
                     </div>
                 </div>
-                <div class="item">
-                    <div class="img_container">
-                        <a href="images/IMG_1216.JPG" data-lightbox="image-1"><img src="images/IMG_1216.JPG" alt=""></a>
-                    </div>
-                </div>
+                <!--<div class="item">-->
+                    <!--<div class="img_container">-->
+                        <!--<a href="images/IMG_1216.JPG" data-lightbox="image-1"><img src="images/IMG_1216.JPG" alt=""></a>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <!--<div class="item">-->
                     <!--<div class="img_container">-->
                         <!--<a href="images/IMG_1644.JPG" data-lightbox="image-1"><img src="images/IMG_1644.JPG" alt=""></a>-->
