--- a/Dent_Shablon/index.html
+++ b/Dent_Shablon/index.html
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <h5><span>Вовк Виктория Анатолиевна - главный врач, </span><span> врач - стоматолог<br>терапевт высшей категории:</span></h5>
+                        <h5><span>Вовк Виктория Анатолиевна -  </span><span>главный врач, врач - стоматолог<br>терапевт высшей категории:</span></h5>
                         <div class="text">
                             Стоматология «Viktoria-Dent» - это полнопрофильный лицензированный стоматологический центр,
                             покрывающий практически все возможные проблемы пациента. Мы сочетаем высокий уровень
